--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "ecommerce",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/index.js",
   "license": "MIT",
   "scripts": {
-    "run-server": "node server.js",
-    "start": "nodemon server.js",
-    "test": "jest --watch --verbose"
+    "start": "node server/index.js",
+    "server": "nodemon",
+    "dev": "concurrently \"nodemon server/index.js\" \"yarn --cwd ./client start\"",
+    "test": "jest --watch --verbose",
+    "local": "yarn && yarn --cwd \"./client\" && npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run"
   },
   "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -23,7 +26,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "jest": "^24.5.0",
